--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4Nw-JS-wEa">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,38 +10,47 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Record Sounds View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RecordSoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vlJ-jX-YK4">
-                                <rect key="frame" x="134" y="307" width="106" height="53"/>
-                                <color key="backgroundColor" red="0.72997825451089771" green="0.88746712767815372" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="Record"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vlJ-jX-YK4">
+                                <rect key="frame" x="110" y="256" width="155" height="155"/>
+                                <state key="normal" image="RecordButton"/>
                                 <connections>
                                     <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AXz-9e-XLt"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0f8-nS-E0O">
-                                <rect key="frame" x="134" y="409" width="106" height="30"/>
-                                <state key="normal" title="Stop Recording"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0f8-nS-E0O">
+                                <rect key="frame" x="155" y="462.5" width="64" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="64" id="E8m-jT-m3h"/>
+                                    <constraint firstAttribute="height" constant="64" id="WVb-J2-Rbr"/>
+                                </constraints>
+                                <state key="normal" image="Stop"/>
                                 <connections>
                                     <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="obC-9T-usQ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tap to Record" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gyf-kY-f7Y">
-                                <rect key="frame" x="121" y="368" width="133" height="41"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Record" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gyf-kY-f7Y">
+                                <rect key="frame" x="122.5" y="428" width="130.5" height="26.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Harmonies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Afk-uu-fTD">
+                                <rect key="frame" x="57" y="94" width="260" height="67"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="56"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.97871412258923729" blue="0.92553824864790302" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="0f8-nS-E0O" firstAttribute="top" secondItem="gyf-kY-f7Y" secondAttribute="bottom" constant="8" id="5H5-ly-9fN"/>
                             <constraint firstItem="gyf-kY-f7Y" firstAttribute="centerX" secondItem="vlJ-jX-YK4" secondAttribute="centerX" id="FJD-jf-gWZ"/>
@@ -52,13 +61,129 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="0ni-Ta-uWN"/>
                     <connections>
+                        <outlet property="recordButton" destination="vlJ-jX-YK4" id="g8h-Xg-Jpu"/>
                         <outlet property="recordingLabel" destination="gyf-kY-f7Y" id="rVc-63-Vof"/>
+                        <outlet property="stopRecordingButton" destination="0f8-nS-E0O" id="DD0-dv-A6h"/>
+                        <segue destination="Lvh-ht-YX7" kind="show" identifier="stopRecording" id="Uga-lx-Ab7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="972" y="53.523238380809602"/>
+        </scene>
+        <!--Play Sounds View Controller-->
+        <scene sceneID="ZFa-Jf-bCe">
+            <objects>
+                <viewController id="Lvh-ht-YX7" customClass="PlaySoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SHy-0X-0s0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="AfF-eB-uaT">
+                                <rect key="frame" x="16" y="64" width="343" height="495"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="h0d-mz-11k">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="247.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X1J-Gi-ore" userLabel="OrgButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="171.5" height="247.5"/>
+                                                <state key="normal" image="Org"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="Lvh-ht-YX7" eventType="touchUpInside" id="SxE-l4-paZ"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="1" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lfV-8O-ygU" userLabel="3rdButton">
+                                                <rect key="frame" x="171.5" y="0.0" width="171.5" height="247.5"/>
+                                                <state key="normal" image="3rd"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="Lvh-ht-YX7" eventType="touchUpInside" id="Bh8-jv-BB1"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="o4o-Zy-OlV">
+                                        <rect key="frame" x="0.0" y="247.5" width="343" height="247.5"/>
+                                        <subviews>
+                                            <button opaque="NO" tag="2" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sse-DF-d1S" userLabel="4thButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="171.5" height="247.5"/>
+                                                <state key="normal" image="4th"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="Lvh-ht-YX7" eventType="touchUpInside" id="nrL-Ws-QUg"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="3" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EeX-e9-rLX" userLabel="5thButton">
+                                                <rect key="frame" x="171.5" y="0.0" width="171.5" height="247.5"/>
+                                                <state key="normal" image="5th"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="Lvh-ht-YX7" eventType="touchUpInside" id="7VU-w3-mb9"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M4d-f6-qzs" userLabel="Stop Button">
+                                <rect key="frame" x="145" y="537" width="84" height="84"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="84" id="Rrr-Sx-8vW"/>
+                                    <constraint firstAttribute="width" constant="84" id="rbx-QM-OOo"/>
+                                </constraints>
+                                <state key="normal" image="Stop"/>
+                                <connections>
+                                    <action selector="stopButtonPressed:" destination="Lvh-ht-YX7" eventType="touchUpInside" id="z26-55-NN0"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.97871412260000001" blue="0.9255382486" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="AfF-eB-uaT" firstAttribute="top" secondItem="17b-iS-HID" secondAttribute="top" id="4Hk-gS-MsX"/>
+                            <constraint firstItem="17b-iS-HID" firstAttribute="bottom" secondItem="M4d-f6-qzs" secondAttribute="bottom" constant="46" id="BOC-6y-SVK"/>
+                            <constraint firstItem="17b-iS-HID" firstAttribute="trailing" secondItem="AfF-eB-uaT" secondAttribute="trailing" constant="16" id="MEw-R5-seX"/>
+                            <constraint firstItem="AfF-eB-uaT" firstAttribute="leading" secondItem="17b-iS-HID" secondAttribute="leading" constant="16" id="bAp-3I-XgL"/>
+                            <constraint firstItem="M4d-f6-qzs" firstAttribute="centerX" secondItem="17b-iS-HID" secondAttribute="centerX" id="dzO-OX-NWr"/>
+                            <constraint firstItem="M4d-f6-qzs" firstAttribute="top" secondItem="AfF-eB-uaT" secondAttribute="bottom" constant="-22" id="eXO-47-1tS"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="17b-iS-HID"/>
+                    </view>
+                    <connections>
+                        <outlet property="fifthButton" destination="EeX-e9-rLX" id="mNn-0Q-PFA"/>
+                        <outlet property="fourthButton" destination="Sse-DF-d1S" id="h0V-9h-Aph"/>
+                        <outlet property="orgButton" destination="X1J-Gi-ore" id="d9d-k9-R9P"/>
+                        <outlet property="stopButton" destination="M4d-f6-qzs" id="Sdd-DK-2Ra"/>
+                        <outlet property="thirdButton" destination="lfV-8O-ygU" id="fwT-Zj-QLW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Evn-Nl-kWa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1852" y="54"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="WuJ-bi-PEY">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4Nw-JS-wEa" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LZ7-Cd-ujW">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Oip-ML-3sk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NIj-rc-6r5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="32.799999999999997" y="53.523238380809602"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="3rd" width="90" height="90"/>
+        <image name="4th" width="90" height="90"/>
+        <image name="5th" width="90" height="90"/>
+        <image name="Org" width="90" height="90"/>
+        <image name="RecordButton" width="155" height="155"/>
+        <image name="Stop" width="155" height="155"/>
+    </resources>
 </document>
